Fixed spacing of headings compared to jump nav

--- a/src/mercator/static/stylesheets/scss/components/_mercator_proposal.scss
+++ b/src/mercator/static/stylesheets/scss/components/_mercator_proposal.scss
@@ -55,7 +55,7 @@ selected. If no proposal is selected, no state is applied.
     font-weight: bold;
     line-height: 1.5;
     margin: 0 -1em 0.8em;
-    padding: 0 1em;
+    padding: 0 1em 1px;
 }
 
 .mercator-proposal-form-sub-subheading {
